--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,36 @@
 @use "~arccorp-vars/dist/scss/main.scss";
 
+@import "./partials/_customer-success-card";
+
 #app {
-    justify-content: center;
-    width: 100%;
-    color: main.$black;
+  justify-content: center;
+  width: 100%;
+  color: main.$black;
+}
+
+.customer-success-jumbo {
+  padding-top: 200px;
+}
+
+.arc-customer-succcess{
+  max-width: 100vw;
+  width: 100%;
+}
+
+.success-story-section {
+  background-color: #f2f7f8;
+
+  .success-story-section-inner {
+    max-width: 1350px;
+    margin: 0 auto;
+    padding: 60px 15px;
   }
+
+  .row {
+    max-width: unset;
+  }
+}
+
+.customer-card-filter {
+  margin: 0 15px 30px;
+}
