--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,7 +13,7 @@
   background-position: top center;
 }
 
-.arc-customer-succcess{
+.arc-customer-succcess {
   max-width: 100vw;
   width: 100%;
 }
@@ -40,7 +40,8 @@
   }
 }
 
-.customer-filter, .product-filter {
+.customer-filter,
+.product-filter {
   &:hover {
     cursor: pointer !important;
   }
@@ -53,7 +54,7 @@
   padding: 5px 20px;
   position: relative;
   margin-right: 30px;
-  box-shadow: rgba(0,0,0,0.1) 0 29px 30px -35px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 29px 30px -35px;
 
   .css-100ebu3-menu {
     display: block;
@@ -65,18 +66,19 @@
     border-top: 1px solid #f6f6f6;
     position: absolute;
     width: 250px;
-    box-shadow: rgba(0,0,0,0.1) 0 29px 30px -28px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 29px 30px -28px;
 
     .css-bio7mv-option {
       padding: 20px;
       text-transform: capitalize;
-      font-family: SourceSansPro-SemiBold, arial ,sans-serif;
+      font-family: SourceSansPro-SemiBold, arial, sans-serif;
     }
   }
-
 }
 
-.clear-filters, .clear-filters.ctaBtn:focus, .clear-filters.ctaBtn:hover {
+.clear-filters,
+.clear-filters.ctaBtn:focus,
+.clear-filters.ctaBtn:hover {
   color: #189bb0;
   font-family: SourceSansPro-SemiBold, arial, sans-serif;
   background: transparent;
@@ -87,13 +89,43 @@
   margin-bottom: auto;
 }
 
+.feedback-callout {
+  background-color: #363452;
+  text-align: center;
+  color: #fff;
+  width: 100%;
+  max-width: inherit;
+  padding: 0 1.25rem;
+
+  .feedback-cta {
+    padding: 3.75rem 0;
+    max-width: 700px;
+    margin: 0 auto;
+
+    .feedback-cta-inside {
+      .feedback-header {
+        line-height: 100%;
+        font-size: 3rem;
+        margin-bottom: 1.375rem;
+        color: #fff;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .feedback-cta-copy {
+    margin-bottom: 0.75rem;
+  }
+}
 
 @media (max-width: 575.98px) {
   .customer-card-filter {
     margin-left: 15px;
   }
 
-  .customer-filter, .product-filter {
+  .customer-filter,
+  .product-filter {
     margin-bottom: 20px;
   }
 }
